// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`multiple select should checkmark user selected options 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="makeStyles-root makeStyles-rootFull"
    >
      <div
        class="makeStyles-inputWrapper"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root OutlinedInput-rootFull OutlinedInput-rootMedium makeStyles-outlinedInput MuiInputBase-fullWidth Mui-focused Mui-focused OutlinedInput-focused"
          role="textbox"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input OutlinedInput-inputMedium makeStyles-input"
            placeholder="Choose an option..."
            readonly=""
            size="1"
            type="text"
            value="text1, text3"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline OutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <svg
          class="SvgDropdownArrows16-root makeStyles-caret"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="M11 10.3L11.7 11 8 14.7 4.3 11 5 10.3 8 13.3 11 10.3ZM8 1.3L11.7 5 11 5.7 8 2.7 5 5.7 4.3 5 7.3 2 7.3 2 8 1.3Z"
          />
        </svg>
      </div>
    </div>
    <div
      class="PicassoPopper-root"
      role="tooltip"
      style="position: absolute; top: 0px; left: 0px; width: 0px;"
      x-placement="bottom-start"
    >
      <ul
        class="MuiList-root Menu-root ScrollMenu-menu"
        role="menu"
        tabindex="-1"
      >
        <div
          class="ScrollMenu-scrollView"
          tabindex="0"
        >
          <li
            aria-disabled="false"
            aria-selected="true"
            class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
            role="option"
            tabindex="-1"
            value="val1"
          >
            <div
              class="Container-flex Container-column MenuItem-content"
            >
              <div
                class="Container-centerAlignItems Container-flex"
              >
                <div
                  class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
                >
                  <svg
                    class="SvgCheckMinor16-root"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M6.5 9.793l4-4 .707.707-4 4-.707.707L3.793 8.5l.707-.707 2 2z"
                    />
                  </svg>
                </div>
                <span
                  class="MenuItem-stringContent MenuItem-stringContentMedium MenuItem-stringContentSemibold"
                >
                  text1
                </span>
              </div>
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            role="option"
            tabindex="-1"
            value="val2"
          >
            <div
              class="Container-flex Container-column MenuItem-content"
            >
              <div
                class="Container-centerAlignItems Container-flex"
              >
                <div
                  class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
                />
                <span
                  class="MenuItem-stringContent MenuItem-stringContentMedium"
                >
                  text2
                </span>
              </div>
            </div>
          </li>
          <li
            aria-disabled="false"
            aria-selected="false"
            class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
            role="option"
            tabindex="-1"
            value="val3"
          >
            <div
              class="Container-flex Container-column MenuItem-content"
            >
              <div
                class="Container-centerAlignItems Container-flex"
              >
                <div
                  class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
                >
                  <svg
                    class="SvgCheckMinor16-root"
                    style="min-width: 16px; min-height: 16px;"
                    viewBox="0 0 16 16"
                  >
                    <path
                      d="M6.5 9.793l4-4 .707.707-4 4-.707.707L3.793 8.5l.707-.707 2 2z"
                    />
                  </svg>
                </div>
                <span
                  class="MenuItem-stringContent MenuItem-stringContentMedium MenuItem-stringContentSemibold"
                >
                  text3
                </span>
              </div>
            </div>
          </li>
        </div>
      </ul>
    </div>
  </div>
</div>
`;

exports[`renders native select 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="makeStyles-root makeStyles-rootFull"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root OutlinedInput-rootFull OutlinedInput-rootMedium makeStyles-nativeInput MuiInputBase-fullWidth"
      >
        <select
          aria-invalid="false"
          class="MuiNativeSelect-root makeStyles-select MuiNativeSelect-select MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input OutlinedInput-inputMedium"
        >
          <option
            disabled=""
            value=""
          >
            Choose an option...
          </option>
          <option
            aria-selected="true"
            role="option"
            value="val1"
          >
            text1
          </option>
          <option
            aria-selected="false"
            role="option"
            value="val2"
          >
            text2
          </option>
          <option
            aria-selected="false"
            role="option"
            value="val3"
          >
            text3
          </option>
        </select>
        <svg
          class="SvgDropdownArrows16-root makeStyles-caret"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="M11 10.3L11.7 11 8 14.7 4.3 11 5 10.3 8 13.3 11 10.3ZM8 1.3L11.7 5 11 5.7 8 2.7 5 5.7 4.3 5 7.3 2 7.3 2 8 1.3Z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline OutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders native select with the empty option enabled when enableReset is \`true\` 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="makeStyles-root makeStyles-rootFull"
    >
      <div
        class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root OutlinedInput-rootFull OutlinedInput-rootMedium makeStyles-nativeInput MuiInputBase-fullWidth"
      >
        <select
          aria-invalid="false"
          class="MuiNativeSelect-root makeStyles-select MuiNativeSelect-select MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input OutlinedInput-inputMedium"
        >
          <option
            value=""
          >
            Choose an option...
          </option>
          <option
            aria-selected="true"
            role="option"
            value="val1"
          >
            text1
          </option>
          <option
            aria-selected="false"
            role="option"
            value="val2"
          >
            text2
          </option>
          <option
            aria-selected="false"
            role="option"
            value="val3"
          >
            text3
          </option>
        </select>
        <svg
          class="SvgDropdownArrows16-root makeStyles-caret"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="M11 10.3L11.7 11 8 14.7 4.3 11 5 10.3 8 13.3 11 10.3ZM8 1.3L11.7 5 11 5.7 8 2.7 5 5.7 4.3 5 7.3 2 7.3 2 8 1.3Z"
          />
        </svg>
        <fieldset
          aria-hidden="true"
          class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline OutlinedInput-notchedOutline"
          style="padding-left: 8px;"
        >
          <legend
            class="PrivateNotchedOutline-legend"
            style="width: 0.01px;"
          >
            <span>
              ​
            </span>
          </legend>
        </fieldset>
      </div>
    </div>
  </div>
</div>
`;

exports[`renders select 1`] = `
<div>
  <div
    class="Picasso-root"
  >
    <div
      class="makeStyles-root makeStyles-rootFull"
    >
      <div
        class="makeStyles-inputWrapper"
      >
        <div
          class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root OutlinedInput-rootFull OutlinedInput-rootMedium makeStyles-outlinedInput MuiInputBase-fullWidth"
          role="textbox"
        >
          <input
            aria-invalid="false"
            autocomplete="off"
            class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input OutlinedInput-inputMedium makeStyles-input"
            readonly=""
            size="1"
            type="text"
            value="text1"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline OutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
        <svg
          class="SvgDropdownArrows16-root makeStyles-caret"
          style="min-width: 16px; min-height: 16px;"
          viewBox="0 0 16 16"
        >
          <path
            d="M11 10.3L11.7 11 8 14.7 4.3 11 5 10.3 8 13.3 11 10.3ZM8 1.3L11.7 5 11 5.7 8 2.7 5 5.7 4.3 5 7.3 2 7.3 2 8 1.3Z"
          />
        </svg>
      </div>
    </div>
  </div>
</div>
`;

exports[`should filter options based on entered value to the input field 1`] = `
<ul
  class="MuiList-root Menu-root ScrollMenu-menu"
  role="menu"
  tabindex="-1"
>
  <div
    aria-disabled="false"
    class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light MenuItem-nonSelectable MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-focusVisible Mui-focusVisible"
    role="menuitem"
    tabindex="0"
  >
    <div
      class="Container-flex Container-column MenuItem-content"
    >
      <div
        class="Container-centerAlignItems Container-flex"
      >
        <div
          aria-autocomplete="list"
          class="MuiInputBase-root MuiOutlinedInput-root OutlinedInput-root OutlinedInput-rootAuto OutlinedInput-rootMedium makeStyles-searchOutlinedInput Mui-focused Mui-focused OutlinedInput-focused MuiInputBase-adornedStart MuiOutlinedInput-adornedStart"
        >
          <svg
            class="SvgSearch16-root makeStyles-searchInputIcon"
            style="min-width: 16px; min-height: 16px;"
            viewBox="0 0 16 16"
          >
            <path
              d="M10.582 9.874l4.625 4.626-.707.707-4.626-4.625a6 6 0 11.707-.707zM6 11A5 5 0 106 1a5 5 0 000 10z"
            />
          </svg>
          <input
            class="MuiInputBase-input MuiOutlinedInput-input OutlinedInput-input OutlinedInput-inputMedium MuiInputBase-inputAdornedStart MuiOutlinedInput-inputAdornedStart"
            placeholder="Search for an option"
            type="text"
            value="3"
          />
          <fieldset
            aria-hidden="true"
            class="PrivateNotchedOutline-root MuiOutlinedInput-notchedOutline OutlinedInput-notchedOutline"
            style="padding-left: 8px;"
          >
            <legend
              class="PrivateNotchedOutline-legend"
              style="width: 0.01px;"
            >
              <span>
                ​
              </span>
            </legend>
          </fieldset>
        </div>
      </div>
    </div>
  </div>
  <div
    class="ScrollMenu-scrollView"
  >
    <li
      aria-disabled="false"
      aria-selected="true"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
      role="option"
      tabindex="-1"
      value="val3"
    >
      <div
        class="Container-flex Container-column MenuItem-content"
      >
        <div
          class="Container-centerAlignItems Container-flex"
        >
          <div
            class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
          />
          <span
            class="MenuItem-stringContent MenuItem-stringContentMedium"
          >
            text3
          </span>
        </div>
      </div>
    </li>
  </div>
</ul>
`;

exports[`should open menu when focus on select 1`] = `
<ul
  class="MuiList-root Menu-root ScrollMenu-menu"
  role="menu"
  tabindex="-1"
>
  <div
    class="ScrollMenu-scrollView"
    tabindex="0"
  >
    <li
      aria-disabled="false"
      aria-selected="true"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
      role="option"
      tabindex="-1"
      value="val1"
    >
      <div
        class="Container-flex Container-column MenuItem-content"
      >
        <div
          class="Container-centerAlignItems Container-flex"
        >
          <div
            class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
          />
          <span
            class="MenuItem-stringContent MenuItem-stringContentMedium"
          >
            text1
          </span>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val2"
    >
      <div
        class="Container-flex Container-column MenuItem-content"
      >
        <div
          class="Container-centerAlignItems Container-flex"
        >
          <div
            class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
          />
          <span
            class="MenuItem-stringContent MenuItem-stringContentMedium"
          >
            text2
          </span>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val3"
    >
      <div
        class="Container-flex Container-column MenuItem-content"
      >
        <div
          class="Container-centerAlignItems Container-flex"
        >
          <div
            class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
          />
          <span
            class="MenuItem-stringContent MenuItem-stringContentMedium"
          >
            text3
          </span>
        </div>
      </div>
    </li>
  </div>
</ul>
`;

exports[`should render description 1`] = `
<ul
  class="MuiList-root Menu-root ScrollMenu-menu"
  role="menu"
  tabindex="-1"
>
  <div
    class="ScrollMenu-scrollView"
    tabindex="0"
  >
    <li
      aria-disabled="false"
      aria-selected="true"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
      role="option"
      tabindex="-1"
      value="val1"
    >
      <div
        class="Container-flex Container-column MenuItem-content"
      >
        <div
          class="Container-centerAlignItems Container-flex"
        >
          <div
            class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
          />
          <span
            class="MenuItem-stringContent MenuItem-stringContentMedium"
          >
            text1
          </span>
        </div>
        <div
          class="Container-leftmediumMargin MenuItem-description"
          style="margin-top: 0.25rem;"
        >
          description1
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val2"
    >
      <div
        class="Container-flex Container-column MenuItem-content"
      >
        <div
          class="Container-centerAlignItems Container-flex"
        >
          <div
            class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
          />
          <span
            class="MenuItem-stringContent MenuItem-stringContentMedium"
          >
            text2
          </span>
        </div>
        <div
          class="Container-leftmediumMargin MenuItem-description"
          style="margin-top: 0.25rem;"
        >
          description2
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val3"
    >
      <div
        class="Container-flex Container-column MenuItem-content"
      >
        <div
          class="Container-centerAlignItems Container-flex"
        >
          <div
            class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
          />
          <span
            class="MenuItem-stringContent MenuItem-stringContentMedium"
          >
            text3
          </span>
        </div>
        <div
          class="Container-leftmediumMargin MenuItem-description"
          style="margin-top: 0.25rem;"
        >
          description3
        </div>
      </div>
    </li>
  </div>
</ul>
`;

exports[`should render options customly 1`] = `
<ul
  class="MuiList-root Menu-root ScrollMenu-menu"
  role="menu"
  tabindex="-1"
>
  <div
    class="ScrollMenu-scrollView"
    tabindex="0"
  >
    <li
      aria-disabled="false"
      aria-selected="true"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light Mui-selected MenuItem-selected MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button Mui-selected"
      role="option"
      tabindex="-1"
      value="val1"
    >
      <div
        class="Container-flex Container-column MenuItem-content"
      >
        <div
          class="Container-centerAlignItems Container-flex"
        >
          <div
            class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
          />
          <div>
            Custom renderered text1
          </div>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val2"
    >
      <div
        class="Container-flex Container-column MenuItem-content"
      >
        <div
          class="Container-centerAlignItems Container-flex"
        >
          <div
            class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
          />
          <div>
            Custom renderered text2
          </div>
        </div>
      </div>
    </li>
    <li
      aria-disabled="false"
      aria-selected="false"
      class="MuiButtonBase-root MuiListItem-root MuiMenuItem-root MenuItem-guttersMedium MenuItem-root MenuItem-light MuiMenuItem-gutters MuiListItem-gutters MuiListItem-button"
      role="option"
      tabindex="-1"
      value="val3"
    >
      <div
        class="Container-flex Container-column MenuItem-content"
      >
        <div
          class="Container-centerAlignItems Container-flex"
        >
          <div
            class="Container-rightxsmallMargin Container-flex Container-inline MenuItem-iconContainer"
          />
          <div>
            Custom renderered text3
          </div>
        </div>
      </div>
    </li>
  </div>
</ul>
`;
